src/cmd/internal/gc/y.output

state 0
	$accept: .file $end 
	$$4: .    (4)

	.  reduce 4 (src line 151)

	file  goto 1
	loadsys  goto 2
	$$4  goto 3

state 1
	$accept:  file.$end 

	$end  accept
	.  error


state 2
	file:  loadsys.package imports xdcl_list 
	package: .    (2)

	LPACKAGE  shift 5
	.  reduce 2 (src line 134)

	package  goto 4

state 3
	loadsys:  $$4.import_package import_there 

	LPACKAGE  shift 7
	.  error

	import_package  goto 6

state 4
	file:  loadsys package.imports xdcl_list 
	imports: .    (6)

	.  reduce 6 (src line 168)

	imports  goto 8

state 5
	package:  LPACKAGE.sym ';' 

	LNAME  shift 10
	'?'  shift 12
	'@'  shift 13
	.  error

	sym  goto 9
	hidden_importsym  goto 11

state 6
	loadsys:  $$4 import_package.import_there 
	$$21: .    (21)

	.  reduce 21 (src line 275)

	import_there  goto 14
	$$21  goto 15

state 7
	import_package:  LPACKAGE.LNAME import_safety ';' 

	LNAME  shift 16
	.  error


state 8
	file:  loadsys package imports.xdcl_list 
	imports:  imports.import ';' 
	xdcl_list: .    (220)

	LIMPORT  shift 19
	.  reduce 220 (src line 1518)

	xdcl_list  goto 17
	import  goto 18

state 9
	package:  LPACKAGE sym.';' 

	';'  shift 20
	.  error


state 10
	sym:  LNAME.    (159)

	.  reduce 159 (src line 1124)


state 11
	sym:  hidden_importsym.    (160)

	.  reduce 160 (src line 1133)


state 12
	sym:  '?'.    (161)

	.  reduce 161 (src line 1134)


state 13
	hidden_importsym:  '@'.LLITERAL '.' LNAME 
	hidden_importsym:  '@'.LLITERAL '.' '?' 

	LLITERAL  shift 21
	.  error


state 14
	loadsys:  $$4 import_package import_there.    (5)

	.  reduce 5 (src line 162)


state 15
	import_there:  $$21.hidden_import_list '$' '$' 
	hidden_import_list: .    (346)

	.  reduce 346 (src line 2220)

	hidden_import_list  goto 22

state 16
	import_package:  LPACKAGE LNAME.import_safety ';' 
	import_safety: .    (19)

	LNAME  shift 24
	.  reduce 19 (src line 267)

	import_safety  goto 23

state 17
	file:  loadsys package imports xdcl_list.    (1)
	xdcl_list:  xdcl_list.xdcl ';' 
	xdcl: .    (23)

	$end  reduce 1 (src line 125)
	error  shift 29
	LLITERAL  shift 69
	LBREAK  shift 41
	LCHAN  shift 79
	LCONST  shift 47
	LCONTINUE  shift 42
	LDEFER  shift 44
	LFALL  shift 40
	LFOR  shift 50
	LFUNC  shift 33
	LGO  shift 43
	LGOTO  shift 45
	LIF  shift 53
	LINTERFACE  shift 84
	LMAP  shift 80
	LNAME  shift 10
	LRETURN  shift 46
	LSELECT  shift 52
	LSTRUCT  shift 83
	LSWITCH  shift 51
	LTYPE  shift 32
	LVAR  shift 30
	LCOMM  shift 66
	'+'  shift 61
	'-'  shift 62
	'^'  shift 65
	'*'  shift 59
	'&'  shift 60
	'('  shift 68
	';'  reduce 23 (src line 288)
	'!'  shift 63
	'~'  shift 64
	'['  shift 78
	'?'  shift 12
	'@'  shift 13
	.  error

	sym  goto 57
	expr  goto 48
	ternaryexpr  goto 55
	fnliteral  goto 74
	for_stmt  goto 35
	if_stmt  goto 38
	non_dcl_stmt  goto 28
	labelname  goto 39
	name  goto 70
	new_name  goto 54
	pexpr  goto 58
	pexpr_no_paren  goto 67
	pseudocall  goto 71
	select_stmt  goto 37
	simple_stmt  goto 34
	switch_stmt  goto 36
	uexpr  goto 56
	xfndcl  goto 27
	xdcl  goto 25
	expr_list  goto 49
	common_dcl  goto 26
	convtype  goto 72
	comptype  goto 73
	interfacetype  goto 82
	structtype  goto 81
	othertype  goto 76
	fntype  goto 75
	hidden_importsym  goto 11
	lconst  goto 31
	fnlitdcl  goto 77

state 18
	imports:  imports import.';' 

	';'  shift 85
	.  error


state 19
	import:  LIMPORT.import_stmt 
	import:  LIMPORT.'(' import_stmt_list osemi ')' 
	import:  LIMPORT.'(' ')' 

	LLITERAL  shift 89
	LNAME  shift 10
	'('  shift 87
	'.'  shift 91
	'?'  shift 12
	'@'  shift 13
	.  error

	import_here  goto 88
	sym  goto 90
	hidden_importsym  goto 11
	import_stmt  goto 86

state 20
	package:  LPACKAGE sym ';'.    (3)

	.  reduce 3 (src line 141)


state 21
	hidden_importsym:  '@' LLITERAL.'.' LNAME 
	hidden_importsym:  '@' LLITERAL.'.' '?' 

	'.'  shift 92
	.  error


state 22
	import_there:  $$21 hidden_import_list.'$' '$' 
	hidden_import_list:  hidden_import_list.hidden_import 

	LCONST  shift 97
	LFUNC  shift 99
	LIMPORT  shift 95
	LTYPE  shift 98
	LVAR  shift 96
	'$'  shift 93
	.  error

	hidden_import  goto 94

state 23
	import_package:  LPACKAGE LNAME import_safety.';' 

	';'  shift 100
	.  error


state 24
	import_safety:  LNAME.    (20)

	.  reduce 20 (src line 268)


state 25
	xdcl_list:  xdcl_list xdcl.';' 

	';'  shift 101
	.  error


state 26
	xdcl:  common_dcl.    (24)

	.  reduce 24 (src line 293)


state 27
	xdcl:  xfndcl.    (25)

	.  reduce 25 (src line 294)


state 28
	xdcl:  non_dcl_stmt.    (26)

	.  reduce 26 (src line 298)


state 29
	xdcl:  error.    (27)

	.  reduce 27 (src line 303)


state 30
	common_dcl:  LVAR.vardcl 
	common_dcl:  LVAR.'(' vardcl_list osemi ')' 
	common_dcl:  LVAR.'(' ')' 

	LNAME  shift 10
	'('  shift 103
	'?'  shift 12
	'@'  shift 13
	.  error

	sym  goto 106
	dcl_name  goto 105
	dcl_name_list  goto 104
	vardcl  goto 102
	hidden_importsym  goto 11

state 31
	common_dcl:  lconst.constdcl 
	common_dcl:  lconst.'(' constdcl osemi ')' 
	common_dcl:  lconst.'(' constdcl ';' constdcl_list osemi ')' 
	common_dcl:  lconst.'(' ')' 

	LNAME  shift 10
	'('  shift 108
	'?'  shift 12
	'@'  shift 13
	.  error

	sym  goto 106
	dcl_name  goto 105
	dcl_name_list  goto 109
	constdcl  goto 107
	hidden_importsym  goto 11

state 32
	common_dcl:  LTYPE.typedcl 
	common_dcl:  LTYPE.'(' typedcl_list osemi ')' 
	common_dcl:  LTYPE.'(' ')' 

	LNAME  shift 10
	'('  shift 111
	'?'  shift 12
	'@'  shift 13
	.  error

	sym  goto 113
	typedclname  goto 112
	typedcl  goto 110
	hidden_importsym  goto 11

state 33
	xfndcl:  LFUNC.fndcl fnbody 
	fntype:  LFUNC.'(' oarg_type_list_ocomma ')' fnres 

	LNAME  shift 10
	'('  shift 115
	'?'  shift 12
	'@'  shift 13
	.  error

	sym  goto 116
	fndcl  goto 114
	hidden_importsym  goto 11

state 34
	non_dcl_stmt:  simple_stmt.    (258)

	.  reduce 258 (src line 1745)


state 35
	non_dcl_stmt:  for_stmt.    (259)

	.  reduce 259 (src line 1747)


state 36
	non_dcl_stmt:  switch_stmt.    (260)

	.  reduce 260 (src line 1748)


state 37
	non_dcl_stmt:  select_stmt.    (261)

	.  reduce 261 (src line 1749)


state 38
	non_dcl_stmt:  if_stmt.    (262)

	.  reduce 262 (src line 1750)


state 39
	non_dcl_stmt:  labelname.':' $$263 stmt 

	':'  shift 117
	.  error


state 40
	non_dcl_stmt:  LFALL.    (265)

	.  reduce 265 (src line 1767)


state 41
	non_dcl_stmt:  LBREAK.onew_name 
	onew_name: .    (157)

	LNAME  shift 10
	'?'  shift 12
	'@'  shift 13
	.  reduce 157 (src line 1118)

	sym  goto 120
	new_name  goto 119
	onew_name  goto 118
	hidden_importsym  goto 11

state 42
	non_dcl_stmt:  LCONTINUE.onew_name 
	onew_name: .    (157)

	LNAME  shift 10
	'?'  shift 12
	'@'  shift 13
	.  reduce 157 (src line 1118)

	sym  goto 120
	new_name  goto 119
	onew_name  goto 121
	hidden_importsym  goto 11

state 43
	non_dcl_stmt:  LGO.pseudocall 

	LLITERAL  shift 69
	LCHAN  shift 79
	LFUNC  shift 125
	LINTERFACE  shift 84
	LMAP  shift 80
	LNAME  shift 10
	LSTRUCT  shift 83
	'('  shift 68
	'['  shift 78
	'?'  shift 12
	'@'  shift 13
	.  error

	sym  goto 124
	fnliteral  goto 74
	name  goto 70
	pexpr  goto 123
	pexpr_no_paren  goto 67
	pseudocall  goto 122
	convtype  goto 72
	comptype  goto 73
	interfacetype  goto 82
	structtype  goto 81
	othertype  goto 76
	fntype  goto 75
	hidden_importsym  goto 11
	fnlitdcl  goto 77

state 44
	non_dcl_stmt:  LDEFER.pseudocall 

	LLITERAL  shift 69
	LCHAN  shift 79
	LFUNC  shift 125
	LINTERFACE  shift 84
	LMAP  shift 80
	LNAME  shift 10
	LSTRUCT  shift 83
	'('  shift 68
	'['  shift 78
	'?'  shift 12
	'@'  shift 13
	.  error

	sym  goto 124
	fnliteral  goto 74
	name  goto 70
	pexpr  goto 123
	pexpr_no_paren  goto 67
	pseudocall  goto 126
	convtype  goto 72
	comptype  goto 73
	interfacetype  goto 82
	structtype  goto 81
	othertype  goto 76
	fntype  goto 75
	hidden_importsym  goto 11
	fnlitdcl  goto 77

state 45
	non_dcl_stmt:  LGOTO.new_name 

	LNAME  shift 10
	'?'  shift 12
	'@'  shift 13
	.  error

	sym  goto 120
	new_name  goto 127
	hidden_importsym  goto 11

state 46
	non_dcl_stmt:  LRETURN.oexpr_list 
	oexpr_list: .    (294)

	LLITERAL  shift 69
	LCHAN  shift 79
	LFUNC  shift 125
	LINTERFACE  shift 84
	LMAP  shift 80
	LNAME  shift 10
	LSTRUCT  shift 83
	LCOMM  shift 66
	'+'  shift 61
	'-'  shift 62
	'^'  shift 65
	'*'  shift 59
	'&'  shift 60
	'('  shift 68
	'!'  shift 63
	'~'  shift 64
	'['  shift 78
	'?'  shift 12
	'@'  shift 13
	.  reduce 294 (src line 1916)

	sym  goto 124
	expr  goto 130
	ternaryexpr  goto 55
	fnliteral  goto 74
	name  goto 70
	pexpr  goto 58
	pexpr_no_paren  goto 67
	pseudocall  goto 71
	uexpr  goto 56
	expr_list  goto 129
	oexpr_list  goto 128
	convtype  goto 72
	comptype  goto 73
	interfacetype  goto 82
	structtype  goto 81
	othertype  goto 76
	fntype  goto 75
	hidden_importsym  goto 11
	fnlitdcl  goto 77

state 47
	lconst:  LCONST.    (38)

	.  reduce 38 (src line 357)


state 48
	simple_stmt:  expr.    (49)
	simple_stmt:  expr.LASOP expr 
	simple_stmt:  expr.LINC 
	simple_stmt:  expr.LDEC 
	expr:  expr.LOROR expr 
	expr:  expr.LANDAND expr 
	expr:  expr.LEQ expr 
	expr:  expr.LNE expr 
	expr:  expr.LLT expr 
	expr:  expr.LLE expr 
	expr:  expr.LGE expr 
	expr:  expr.LGT expr 
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'|' expr 
	expr:  expr.'^' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'%' expr 
	expr:  expr.'&' expr 
	expr:  expr.LANDNOT expr 
	expr:  expr.LLSH expr 
	expr:  expr.LRSH expr 
	expr:  expr.LCOMM expr 
	ternaryexpr:  expr.LTHEN expr LELSE expr 
	expr_list:  expr.    (278)

	LASOP  shift 131
	LCOLAS  reduce 278 (src line 1851)
	LTHEN  shift 154
	LANDAND  shift 135
	LANDNOT  shift 150
	LCOMM  shift 153
	LDEC  shift 133
	LEQ  shift 136
	LGE  shift 140
	LGT  shift 141
	LINC  shift 132
	LLE  shift 139
	LLSH  shift 151
	LLT  shift 138
	LNE  shift 137
	LOROR  shift 134
	LRSH  shift 152
	'+'  shift 142
	'-'  shift 143
	'|'  shift 144
	'^'  shift 145
	'*'  shift 146
	'/'  shift 147
	'%'  shift 148
	'&'  shift 149
	'='  reduce 278 (src line 1851)
	','  reduce 278 (src line 1851)
	.  reduce 49 (src line 413)


state 49
	simple_stmt:  expr_list.'=' expr_list 
	simple_stmt:  expr_list.LCOLAS expr_list 
	expr_list:  expr_list.',' expr 

	LCOLAS  shift 156
	'='  shift 155
	','  shift 157
	.  error


state 50
	for_stmt:  LFOR.$$74 for_body 
	$$74: .    (74)

	.  reduce 74 (src line 662)

	$$74  goto 158

state 51
	switch_stmt:  LSWITCH.$$88 if_header $$89 LBODY caseblock_list '}' 
	$$88: .    (88)

	.  reduce 88 (src line 757)

	$$88  goto 159

state 52
	select_stmt:  LSELECT.$$91 LBODY caseblock_list '}' 
	$$91: .    (91)

	.  reduce 91 (src line 780)

	$$91  goto 160

state 53
	if_stmt:  LIF.$$78 if_header $$79 loop_body $$80 elseif_list else 
	$$78: .    (78)

	.  reduce 78 (src line 691)

	$$78  goto 161

state 54
	labelname:  new_name.    (165)

	.  reduce 165 (src line 1178)


state 55
	expr:  ternaryexpr.    (93)

	.  reduce 93 (src line 796)


state 56
	expr:  uexpr.    (94)

	.  reduce 94 (src line 798)


state 57
	new_name:  sym.    (155)
	name:  sym.    (164)

	':'  reduce 155 (src line 1102)
	.  reduce 164 (src line 1169)


state 58
	uexpr:  pexpr.    (116)
	pseudocall:  pexpr.'(' ')' 
	pseudocall:  pexpr.'(' expr_or_type_list ocomma ')' 
	pseudocall:  pexpr.'(' expr_or_type_list LDDD ocomma ')' 
	pexpr_no_paren:  pexpr.'.' sym 
	pexpr_no_paren:  pexpr.'.' '(' expr_or_type ')' 
	pexpr_no_paren:  pexpr.'.' '(' LTYPE ')' 
	pexpr_no_paren:  pexpr.'[' expr ']' 
	pexpr_no_paren:  pexpr.'[' oexpr ':' oexpr ']' 
	pexpr_no_paren:  pexpr.'[' oexpr ':' oexpr ':' oexpr ']' 

	'('  shift 162
	'.'  shift 163
	'['  shift 164
	.  reduce 116 (src line 888)


state 59
	uexpr:  '*'.uexpr 

	LLITERAL  shift 69
	LCHAN  shift 79
	LFUNC  shift 125
	LINTERFACE  shift 84
	LMAP  shift 80
	LNAME  shift 10
	LSTRUCT  shift 83
	LCOMM  shift 66
	'+'  shift 61
	'-'  shift 62
	'^'  shift 65
	'*'  shift 59
	'&'  shift 60
	'('  shift 68
	'!'  shift 63
	'~'  shift 64
	'['  shift 78
	'?'  shift 12
	'@'  shift 13
	.  error

	sym  goto 124
	fnliteral  goto 74
	name  goto 70
	pexpr  goto 58
	pexpr_no_paren  goto 67
	pseudocall  goto 71
	uexpr  goto 165
	convtype  goto 72
	comptype  goto 73
	interfacetype  goto 82
	structtype  goto 81
	othertype  goto 76
	fntype  goto 75
	hidden_importsym  goto 11
	fnlitdcl  goto 77

state 60
	uexpr:  '&'.uexpr 

	LLITERAL  shift 69
	LCHAN  shift 79
	LFUNC  shift 125
	LINTERFACE  shift 84
	LMAP  shift 80
	LNAME  shift 10
	LSTRUCT  shift 83
	LCOMM  shift 66
	'+'  shift 61
	'-'  shift 62
	'^'  shift 65
	'*'  shift 59
	'&'  shift 60
	'('  shift 68
	'!'  shift 63
	'~'  shift 64
	'['  shift 78
	'?'  shift 12
	'@'  shift 13
	.  error

	sym  goto 124
	fnliteral  goto 74
	name  goto 70
	pexpr  goto 58
	pexpr_no_paren  goto 67
	pseudocall  goto 71
	uexpr  goto 166
	convtype  goto 72
	comptype  goto 73
	interfacetype  goto 82
	structtype  goto 81
	othertype  goto 76
	fntype  goto 75
	hidden_importsym  goto 11
	fnlitdcl  goto 77

state 61
	uexpr:  '+'.uexpr 

	LLITERAL  shift 69
	LCHAN  shift 79
	LFUNC  shift 125
	LINTERFACE  shift 84
	LMAP  shift 80
	LNAME  shift 10
	LSTRUCT  shift 83
	LCOMM  shift 66
	'+'  shift 61
	'-'  shift 62
	'^'  shift 65
	'*'  shift 59
	'&'  shift 60
	'('  shift 68
	'!'  shift 63
	'~'  shift 64
	'['  shift 78
	'?'  shift 12
	'@'  shift 13
	.  error

	sym  goto 124
	fnliteral  goto 74
	name  goto 70
	pexpr  goto 58
	pexpr_no_paren  goto 67
	pseudocall  goto 71
	uexpr  goto 167
	convtype  goto 72
	comptype  goto 73
	interfacetype  goto 82
	structtype  goto 81
	othertype  goto 76
	fntype  goto 75
	hidden_importsym  goto 11
	fnlitdcl  goto 77

state 62
	uexpr:  '-'.uexpr 

	LLITERAL  shift 69
	LCHAN  shift 79
	LFUNC  shift 125
	LINTERFACE  shift 84
	LMAP  shift 80
	LNAME  shift 10
	LSTRUCT  shift 83
	LCOMM  shift 66
	'+'  shift 61
	'-'  shift 62
	'^'  shift 65
	'*'  shift 59
	'&'  shift 60
	'('  shift 68
	'!'  shift 63
	'~'  shift 64
	'['  shift 78
	'?'  shift 12
	'@'  shift 13
	.  error

	sym  goto 124
	fnliteral  goto 74
	name  goto 70
	pexpr  goto 58
	pexpr_no_paren  goto 67
	pseudocall  goto 71
	uexpr  goto 168
	convtype  goto 72
	comptype  goto 73
	interfacetype  goto 82
	structtype  goto 81
	othertype  goto 76
	fntype  goto 75
	hidden_importsym  goto 11
	fnlitdcl  goto 77

state 63
	uexpr:  '!'.uexpr 

	LLITERAL  shift 69
	LCHAN  shift 79
	LFUNC  shift 125
	LINTERFACE  shift 84
	LMAP  shift 80
	LNAME  shift 10
	LSTRUCT  shift 83
	LCOMM  shift 66
	'+'  shift 61
	'-'  shift 62
	'^'  shift 65
	'*'  shift 59
	'&'  shift 60
	'('  shift 68
	'!'  shift 63
	'~'  shift 64
	'['  shift 78
	'?'  shift 12
	'@'  shift 13
	.  error

	sym  goto 124
	fnliteral  goto 74
	name  goto 70
	pexpr  goto 58
	pexpr_no_paren  goto 67
	pseudocall  goto 71
	uexpr  goto 169
	convtype  goto 72
	comptype  goto 73
	interfacetype  goto 82
	structtype  goto 81
	othertype  goto 76
	fntype  goto 75
	hidden_importsym  goto 11
	fnlitdcl  goto 77

state 64
	uexpr:  '~'.uexpr 

	LLITERAL  shift 69
	LCHAN  shift 79
	LFUNC  shift 125
	LINTERFACE  shift 84
	LMAP  shift 80
	LNAME  shift 10
	LSTRUCT  shift 83
	LCOMM  shift 66
	'+'  shift 61
	'-'  shift 62
	'^'  shift 65
	'*'  shift 59
	'&'  shift 60
	'('  shift 68
	'!'  shift 63
	'~'  shift 64
	'['  shift 78
	'?'  shift 12
	'@'  shift 13
	.  error

	sym  goto 124
	fnliteral  goto 74
	name  goto 70
	pexpr  goto 58
	pexpr_no_paren  goto 67
	pseudocall  goto 71
	uexpr  goto 170
	convtype  goto 72
	comptype  goto 73
	interfacetype  goto 82
	structtype  goto 81
	othertype  goto 76
	fntype  goto 75
	hidden_importsym  goto 11
	fnlitdcl  goto 77

state 65
	uexpr:  '^'.uexpr 

	LLITERAL  shift 69
	LCHAN  shift 79
	LFUNC  shift 125
	LINTERFACE  shift 84
	LMAP  shift 80
	LNAME  shift 10
	LSTRUCT  shift 83
	LCOMM  shift 66
	'+'  shift 61
	'-'  shift 62
	'^'  shift 65
	'*'  shift 59
	'&'  shift 60
	'('  shift 68
	'!'  shift 63
	'~'  shift 64
	'['  shift 78
	'?'  shift 12
	'@'  shift 13
	.  error

	sym  goto 124
	fnliteral  goto 74
	name  goto 70
	pexpr  goto 58
	pexpr_no_paren  goto 67
	pseudocall  goto 71
	uexpr  goto 171
	convtype  goto 72
	comptype  goto 73
	interfacetype  goto 82
	structtype  goto 81
	othertype  goto 76
	fntype  goto 75
	hidden_importsym  goto 11
	fnlitdcl  goto 77

state 66
	uexpr:  LCOMM.uexpr 

	LLITERAL  shift 69
	LCHAN  shift 79
	LFUNC  shift 125
	LINTERFACE  shift 84
	LMAP  shift 80
	LNAME  shift 10
	LSTRUCT  shift 83
	LCOMM  shift 66
	'+'  shift 61
	'-'  shift 62
	'^'  shift 65
	'*'  shift 59
	'&'  shift 60
	'('  shift 68
	'!'  shift 63
	'~'  shift 64
	'['  shift 78
	'?'  shift 12
	'@'  shift 13
	.  error

	sym  goto 124
	fnliteral  goto 74
	name  goto 70
	pexpr  goto 58
	pexpr_no_paren  goto 67
	pseudocall  goto 71
	uexpr  goto 172
	convtype  goto 72
	comptype  goto 73
	interfacetype  goto 82
	structtype  goto 81
	othertype  goto 76
	fntype  goto 75
	hidden_importsym  goto 11
	fnlitdcl  goto 77

state 67
	pexpr_no_paren:  pexpr_no_paren.'{' start_complit braced_keyval_list '}' 
	pexpr:  pexpr_no_paren.    (148)

	'{'  shift 173
	.  reduce 148 (src line 1065)


state 68
	pexpr_no_paren:  '('.expr_or_type ')' '{' start_complit braced_keyval_list '}' 
	pexpr:  '('.expr_or_type ')' 

	LLITERAL  shift 69
	LCHAN  shift 79
	LFUNC  shift 125
	LINTERFACE  shift 84
	LMAP  shift 80
	LNAME  shift 10
	LSTRUCT  shift 83
	LCOMM  shift 181
	'+'  shift 61
	'-'  shift 62
	'^'  shift 65
	'*'  shift 180
	'&'  shift 60
	'('  shift 68
	'!'  shift 63
	'~'  shift 64
	'['  shift 78
	'?'  shift 12
	'@'  shift 13
	.  error

	sym  goto 124
	expr  goto 175
	ternaryexpr  goto 55
	expr_or_type  goto 174
	fnliteral  goto 74
	name  goto 70
	non_expr_type  goto 176
	pexpr  goto 58
	pexpr_no_paren  goto 67
	pseudocall  goto 71
	uexpr  goto 56
	convtype  goto 72
	comptype  goto 73
	interfacetype  goto 82
	structtype  goto 81
	recvchantype  goto 177
	othertype  goto 179
	fntype  goto 178
	hidden_importsym  goto 11
	fnlitdcl  goto 77

state 69
	pexpr_no_paren:  LLITERAL.    (128)

	.  reduce 128 (src line 952)


state 70
	pexpr_no_paren:  name.    (129)

	.  reduce 129 (src line 957)


state 71
	pexpr_no_paren:  pseudocall.    (136)

	.  reduce 136 (src line 995)


state 72
	pexpr_no_paren:  convtype.'(' expr ocomma ')' 

	'('  shift 182
	.  error


state 73
	pexpr_no_paren:  comptype.lbrace start_complit braced_keyval_list '}' 

	LBODY  shift 184
	'{'  shift 185
	.  error

	lbrace  goto 183

state 74
	pexpr_no_paren:  fnliteral.    (141)

	.  reduce 141 (src line 1022)


state 75
	convtype:  fntype.    (183)
	fnlitdcl:  fntype.    (217)

	'('  reduce 183 (src line 1231)
	.  reduce 217 (src line 1495)


state 76
	convtype:  othertype.    (184)
	comptype:  othertype.    (185)

	'('  reduce 184 (src line 1233)
	.  reduce 185 (src line 1235)


state 77
	fnliteral:  fnlitdcl.lbrace stmt_list '}' 
	fnliteral:  fnlitdcl.error 

	error  shift 187
	LBODY  shift 184
	'{'  shift 185
	.  error

	lbrace  goto 186

state 78
	othertype:  '['.oexpr ']' ntype 
	othertype:  '['.LDDD ']' ntype 
	oexpr: .    (292)

	LLITERAL  shift 69
	LCHAN  shift 79
	LDDD  shift 189
	LFUNC  shift 125
	LINTERFACE  shift 84
	LMAP  shift 80
	LNAME  shift 10
	LSTRUCT  shift 83
	LCOMM  shift 66
	'+'  shift 61
	'-'  shift 62
	'^'  shift 65
	'*'  shift 59
	'&'  shift 60
	'('  shift 68
	'!'  shift 63
	'~'  shift 64
	'['  shift 78
	'?'  shift 12
	'@'  shift 13
	.  reduce 292 (src line 1910)

	sym  goto 124
	expr  goto 190
	ternaryexpr  goto 55
	fnliteral  goto 74
	name  goto 70
	oexpr  goto 188
	pexpr  goto 58
	pexpr_no_paren  goto 67
	pseudocall  goto 71
	uexpr  goto 56
	convtype  goto 72
	comptype  goto 73
	interfacetype  goto 82
	structtype  goto 81
	othertype  goto 76
	fntype  goto 75
	hidden_importsym  goto 11
	fnlitdcl  goto 77

state 79
	othertype:  LCHAN.non_recvchantype 
	othertype:  LCHAN.LCOMM ntype 

	LCHAN  shift 79
	LFUNC  shift 125
	LINTERFACE  shift 84
	LMAP  shift 80
	LNAME  shift 10
	LSTRUCT  shift 83
	LCOMM  shift 192
	'*'  shift 198
	'('  shift 197
	'['  shift 78
	'?'  shift 12
	'@'  shift 13
	.  error

	sym  goto 124
	dotname  goto 196
	name  goto 199
	interfacetype  goto 82
	structtype  goto 81
	ptrtype  goto 195
	non_recvchantype  goto 191
	othertype  goto 194
	fntype  goto 193
	hidden_importsym  goto 11

state 80
	othertype:  LMAP.'[' ntype ']' ntype 

	'['  shift 200
	.  error


state 81
	othertype:  structtype.    (198)

	.  reduce 198 (src line 1283)


state 82
	othertype:  interfacetype.    (199)

	.  reduce 199 (src line 1284)


state 83
	structtype:  LSTRUCT.lbrace structdcl_list osemi '}' 
	structtype:  LSTRUCT.lbrace '}' 

	LBODY  shift 184
	'{'  shift 185
	.  error

	lbrace  goto 201

state 84
	interfacetype:  LINTERFACE.lbrace interfacedcl_list osemi '}' 
	interfacetype:  LINTERFACE.lbrace '}' 

	LBODY  shift 184
	'{'  shift 185
	.  error

	lbrace  goto 202

state 85
	imports:  imports import ';'.    (7)

	.  reduce 7 (src line 169)


state 86
	import:  LIMPORT import_stmt.    (8)

	.  reduce 8 (src line 171)


state 87
	import:  LIMPORT '('.import_stmt_list osemi ')' 
	import:  LIMPORT '('.')' 

	LLITERAL  shift 89
	LNAME  shift 10
	')'  shift 204
	'.'  shift 91
	'?'  shift 12
	'@'  shift 13
	.  error

	import_here  goto 88
	sym  goto 90
	hidden_importsym  goto 11
	import_stmt  goto 205
	import_stmt_list  goto 203

state 88
	import_stmt:  import_here.import_package import_there 
	import_stmt:  import_here.import_there 
	$$21: .    (21)

	LPACKAGE  shift 7
	.  reduce 21 (src line 275)

	import_package  goto 206
	import_there  goto 207
	$$21  goto 15

state 89
	import_here:  LLITERAL.    (15)

	.  reduce 15 (src line 227)


state 90
	import_here:  sym.LLITERAL 

	LLITERAL  shift 208
	.  error


state 91
	import_here:  '.'.LLITERAL 

	LLITERAL  shift 209
	.  error


state 92
	hidden_importsym:  '@' LLITERAL '.'.LNAME 
	hidden_importsym:  '@' LLITERAL '.'.'?' 

	LNAME  shift 210
	'?'  shift 211
	.  error


state 93
	import_there:  $$21 hidden_import_list '$'.'$' 

	'$'  shift 212
	.  error


state 94
	hidden_import_list:  hidden_import_list hidden_import.    (347)

	.  reduce 347 (src line 2221)


state 95
	hidden_import:  LIMPORT.LNAME LLITERAL ';' 

	LNAME  shift 213
	.  error


state 96
	hidden_import:  LVAR.hidden_pkg_importsym hidden_type ';' 

	'@'  shift 13
	.  error

	hidden_importsym  goto 215
	hidden_pkg_importsym  goto 214

state 97
	hidden_import:  LCONST.hidden_pkg_importsym '=' hidden_constant ';' 
	hidden_import:  LCONST.hidden_pkg_importsym hidden_type '=' hidden_constant ';' 

	'@'  shift 13
	.  error

	hidden_importsym  goto 215
	hidden_pkg_importsym  goto 216

state 98
	hidden_import:  LTYPE.hidden_pkgtype hidden_type ';' 

	'@'  shift 13
	.  error

	hidden_importsym  goto 215
	hidden_pkg_importsym  goto 218
	hidden_pkgtype  goto 217

state 99
	hidden_import:  LFUNC.hidden_fndcl fnbody ';' 

	'('  shift 221
	'@'  shift 13
	.  error

	hidden_fndcl  goto 219
	hidden_importsym  goto 215
	hidden_pkg_importsym  goto 220

state 100
	import_package:  LPACKAGE LNAME import_safety ';'.    (18)

	.  reduce 18 (src line 250)


state 101
	xdcl_list:  xdcl_list xdcl ';'.    (221)

	.  reduce 221 (src line 1522)


state 102
	common_dcl:  LVAR vardcl.    (28)

	.  reduce 28 (src line 308)


state 103
	common_dcl:  LVAR '('.vardcl_list osemi ')' 
	common_dcl:  LVAR '('.')' 

	LNAME  shift 10
	')'  shift 223
	'?'  shift 12
	'@'  shift 13
	.  error

	sym  goto 106
	dcl_name  goto 105
	dcl_name_list  goto 104
	vardcl  goto 224
	vardcl_list  goto 222
	hidden_importsym  goto 11

state 104
	vardcl:  dcl_name_list.ntype 
	vardcl:  dcl_name_list.ntype '=' expr_list 
	vardcl:  dcl_name_list.'=' expr_list 
	dcl_name_list:  dcl_name_list.',' dcl_name 

	LCHAN  shift 79
	LFUNC  shift 125
	LINTERFACE  shift 84
	LMAP  shift 80
	LNAME  shift 10
	LSTRUCT  shift 83
	LCOMM  shift 234
	'*'  shift 198
	'('  shift 233
	'='  shift 226
	'['  shift 78
	'?'  shift 12
	'@'  shift 13
	','  shift 227
	.  error

	sym  goto 124
	ntype  goto 225
	dotname  goto 232
	name  goto 199
	interfacetype  goto 82
	structtype  goto 81
	ptrtype  goto 231
	recvchantype  goto 228
	othertype  goto 230
	fntype  goto 229
	hidden_importsym  goto 11

state 105
	dcl_name_list:  dcl_name.    (276)

	.  reduce 276 (src line 1841)


state 106
	dcl_name:  sym.    (156)

	.  reduce 156 (src line 1112)


state 107
	common_dcl:  lconst constdcl.    (31)

	.  reduce 31 (src line 321)


state 108
	common_dcl:  lconst '('.constdcl osemi ')' 
	common_dcl:  lconst '('.constdcl ';' constdcl_list osemi ')' 
	common_dcl:  lconst '('.')' 

	LNAME  shift 10
	')'  shift 236
	'?'  shift 12
	'@'  shift 13
	.  error

	sym  goto 106
	dcl_name  goto 105
	dcl_name_list  goto 109
	constdcl  goto 235
	hidden_importsym  goto 11
